networking/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: chat-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: users-svc-service
                port:
                  number: 3000
          - path: /(chat)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ws-service-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-front-service
                port:
                  number: 80
